--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-/node_modules
-/dist
-/dist-ssr
+node_modules
+dist
+dist-ssr
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-/.DS_Store
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
