--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "papaparse": "^5.4.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
